After 1.3

  New Features

    - Implemented PUT and GET support to CMFCalendar.Event for
      editing via FTP/WebDAV (thanks to Sidnei da Silva).

  Bug Fixes

    - Remove workaround in CMFCore.utils for recognizing links in
      StructuredText:  STX in CMF content should now recognize exactly
      the same links as the underlying Zope.  Note that we *do* still
      provide a customized HTML class, to permit embedding images without
      generating the "whole" page.  Collector #6.

    - Remove bizarre, shadowing import of CMFCore.utils as 'utils'
      into package namespace of CMFDefault;  instead, import specific
      names from that package directly (thanks to Paul Winkler for
      pointing out the incongruity).

    - Fix (theoretical) bug in CMFCore.DirectoryView which allowed
      non-registered directories to slip through (UI didn't exercise it).

    - Merge Christian Theune's fix for funky default argument values on
      CMFCalendar.Event's constructor and edit methods (collector #76).

    - FSPageTemplates overwrote a user-generated 'Content-Type' header.
      We now check to make sure a Content-Type header is not already set
      before allowing a page template to set its own.

    - Fixed bugs around 'addActionProvider' in ActionsTool (Collector #42).

    - Fixed race condition in lazy initialization of filesystem-based skin
      methods;  the bug led to odd name errors on 'context' for
      FSPythonScripts (Collector #37).

    - Removed crufty 'isDesktop' stuff from 'folder_factories' and
      'folder_contents' methods.

    - Fixed HTML-invalidating call to 'filterCookie' in 'folder_contents'.
    
    - Fixed unclosed 'tr' element  in ZPT version of 'folder_edit_form'
      (Collector #57).

    - Fixed CalendarTool to use portal_type and not Type to search for
      events in the catalog (Collector #28, thanks to Heimo Laukkanen
      for the report).

    - Fixed a bug in CalendarTool where events were not showing on the